Fixed flex item spacing in desktop mode

--- a/style.scss
+++ b/style.scss
@@ -131,6 +131,7 @@ footer {
     .card-info {
       flex-basis: 51%;
       padding: 6.3%;
+      justify-content: space-between;
       h1 {
         font-size: 2.25rem;
       }
